<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.gov.defra.stw</groupId>
  <artifactId>mapping-library</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <!--  Project info  -->
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!--  Build tools  -->
    <checkstyle.version>10.8.1</checkstyle.version>
    <git-build-hook-maven-plugin.version>3.4.1</git-build-hook-maven-plugin.version>
    <jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <maven-remote-resources-plugin.version>3.1.0</maven-remote-resources-plugin.version>
    <maven.checkstyle.version>3.3.1</maven.checkstyle.version>
    <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
    <maven.help.plugin.version>3.4.0</maven.help.plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
    <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
    <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
    <maven.versions.plugin.version>2.16.0</maven.versions.plugin.version>
    <owasp.maven.plugin.version>8.4.0</owasp.maven.plugin.version>

    <!--  Dependencies  -->
    <assertj.version>3.24.2</assertj.version>
    <everit.json.schema.version>1.14.4</everit.json.schema.version>
    <jackson.version>2.16.1</jackson.version>
    <jupiter.version>5.10.2</jupiter.version>
    <lombok.version>1.18.22</lombok.version>
    <mockito.version>5.10.0</mockito.version>
    <shared-resources.version>1.0.0</shared-resources.version>
    <slf4j.version>1.7.30</slf4j.version>
    <spring.boot.starter.version>3.2.2</spring.boot.starter.version>
    <spring.context.version>6.1.3</spring.context.version>
    <tracesx.notification.schema.version>4.0.2</tracesx.notification.schema.version>
  </properties>

  <modules>
    <module>trade-schema</module>
    <module>trade-mapping-to-trade</module>
    <module>trade-validation</module>
    <module>trade-dtos</module>
    <module>trade-mapping-to-ipaffs</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${jackson.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>${spring.context.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>notification-schema-core</artifactId>
        <version>${tracesx.notification.schema.version}</version>
      </dependency>
      <dependency>
        <groupId>uk.gov.defra.tracesx</groupId>
        <artifactId>notification-schema-java</artifactId>
        <version>${tracesx.notification.schema.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.erosb</groupId>
        <artifactId>everit-json-schema</artifactId>
        <version>${everit.json.schema.version}</version>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring.boot.starter.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven.deploy.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven.release.plugin.version}</version>
          <configuration>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <tagNameFormat>@{project.version}</tagNameFormat>
            <releaseProfiles>release</releaseProfiles>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
          <configuration>
            <useDefaultDelimiters>true</useDefaultDelimiters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${maven.versions.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.maven.plugin.version}</version>
          <configuration>
            <destFile>${project.basedir}/target/jacoco.exec</destFile>
            <append>true</append>
            <excludes>
              <exclude>classes/uk/gov/defra/tracesx/trade/dto/*.class</exclude>
            </excludes>
          </configuration>
          <executions>
            <execution>
              <id>default-prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>default-check</id>
              <goals>
                <goal>check</goal>
              </goals>
              <configuration>
                <rules>
                  <rule implementation="org.jacoco.maven.RuleConfiguration">
                    <element>BUNDLE</element>
                    <limits>
                      <limit implementation="org.jacoco.report.check.Limit">
                        <counter>LINE</counter>
                        <value>COVEREDRATIO</value>
                      </limit>
                    </limits>
                  </rule>
                </rules>
              </configuration>
            </execution>
            <execution>
              <id>report-agent</id>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${owasp.maven.plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-remote-resources-plugin</artifactId>
          <version>${maven-remote-resources-plugin.version}</version>
          <configuration>
            <resourceBundles>
              <resourceBundle>uk.gov.defra.tracesx:shared-resources:${shared-resources.version}
              </resourceBundle>
            </resourceBundles>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>process</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.rudikershaw.gitbuildhook</groupId>
          <artifactId>git-build-hook-maven-plugin</artifactId>
          <version>${git-build-hook-maven-plugin.version}</version>
          <configuration>
            <gitConfig>
              <core.hooksPath>hooks</core.hooksPath>
            </gitConfig>
          </configuration>
          <executions>
            <execution>
              <id>configure-git-hooks</id>
              <goals>
                <goal>configure</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven.checkstyle.version}</version>
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>${checkstyle.version}</version>
            </dependency>
          </dependencies>
          <configuration>
            <configLocation>${project.build.directory}/maven-shared-archive-resources/google_checks_ipaffs.xml</configLocation>
            <logViolationsToConsole>true</logViolationsToConsole>
            <outputFile>${project.build.directory}/checkstyle-result.xml</outputFile>
            <violationSeverity>warning</violationSeverity>
            <failsOnError>true</failsOnError>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-remote-resources-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.rudikershaw.gitbuildhook</groupId>
        <artifactId>git-build-hook-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${owasp.maven.plugin.version}</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>jenkins</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.rudikershaw.gitbuildhook</groupId>
            <artifactId>git-build-hook-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>configure-git-hooks</id>
                <phase>none</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
